Add git repository to csproj

--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -13,6 +13,8 @@
 		<Company>MintPlayer</Company>
 		<Description>Templates for single-sign-on functionality</Description>
 		<PackageTags>IdentityServer;Templates</PackageTags>
+		<RepositoryType>Git</RepositoryType>
+		<RepositoryUrl>https://github.com/MintPlayer/MintPlayer.AspNetCore.Templates</RepositoryUrl>
 
 		<IncludeContentInPack>true</IncludeContentInPack>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
