--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/MintPlayer.AspNetCore.IdentityServer.Application.Web.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/MintPlayer.AspNetCore.IdentityServer.Application.Web.csproj
@@ -7,4 +7,8 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\MintPlayer.AspNetCore.IdentityServer.Application.Data\MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj" />
+	</ItemGroup>
+	
 </Project>
