--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Data/MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Data/MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\MintPlayer.AspNetCore.IdentityServer.Application.Dtos\MintPlayer.AspNetCore.IdentityServer.Application.Dtos.csproj" />
+		<ProjectReference Include="..\Dtos\MintPlayer.AspNetCore.IdentityServer.Application.Dtos.csproj" />
 	</ItemGroup>
 
 </Project>
