--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/MintPlayer.AspNetCore.IdentityServer.Application.Web.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/MintPlayer.AspNetCore.IdentityServer.Application.Web.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\MintPlayer.AspNetCore.IdentityServer.Application.Data\MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj" />
+		<ProjectReference Include="..\Data\MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj" />
 	</ItemGroup>
 	
 </Project>
