--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Dtos\MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Dtos.csproj" />
+		<ProjectReference Include="..\Data.Abstractions\MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
