--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>1.2.2</PackageVersion>
+		<PackageVersion>1.2.3</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -33,7 +33,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.0.4" />
+		<PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.0.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 	</ItemGroup>
 		
 </Project>
