--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj
@@ -10,4 +10,10 @@
 		<ProjectReference Include="..\Data.Abstractions\MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.Abstractions.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.0.4" />
+		<PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+	</ItemGroup>
+
 </Project>
