--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.csproj
@@ -11,4 +11,9 @@
 		<ProjectReference Include="..\Data\MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
+	</ItemGroup>
+
 </Project>
