Add angular app

--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>1.2.3</PackageVersion>
+		<PackageVersion>1.2.4</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -33,12 +33,49 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Templates\Application\Web\appsettings.json" />
+	  <None Remove="Templates\IdentityProvider\Web\appsettings.Development.json" />
+	  <None Remove="Templates\IdentityProvider\Web\appsettings.json" />
+	  <None Remove="Templates\IdentityProvider\Web\appsettings.Production.json" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.0.4" />
 		<PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.0.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+		<PackageReference Include="MintPlayer.AspNetCore.SubDirectoryViews" Version="6.0.0" />
 	</ItemGroup>
-		
+
+	<ItemGroup>
+	  <Folder Include="Templates\Application\Web\Server\Controllers\" />
+	  <Folder Include="Templates\Application\Web\Server\ViewModels\" />
+	  <Folder Include="Templates\Application\Web\Server\Views\" />
+	  <Folder Include="Templates\IdentityProvider\Web\Server\Controllers\" />
+	  <Folder Include="Templates\IdentityProvider\Web\Server\ViewModels\" />
+	  <Folder Include="Templates\IdentityProvider\Web\Server\Views\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Templates/Application/Web/appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Templates/Application/Web/appsettings.*.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<DependentUpon>Templates/Application/Web/appsettings.json</DependentUpon>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Templates/IdentityProvider/Web/appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Templates/IdentityProvider/Web/appsettings.*.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<DependentUpon>Templates/IdentityProvider/Web/appsettings.json</DependentUpon>
+		</Content>
+	</ItemGroup>
+	
 </Project>
