--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/MintPlayer.AspNetCore.IdentityServer.Application.Web.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/MintPlayer.AspNetCore.IdentityServer.Application.Web.csproj
@@ -13,7 +13,10 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.3" />
+		<PackageReference Include="MintPlayer.AspNetCore.Hsts" Version="6.0.0" />
 		<PackageReference Include="MintPlayer.AspNetCore.SubDirectoryViews" Version="6.0.0" />
+		<PackageReference Include="MintPlayer.AspNetCore.XsrfForSpas" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
