--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/ClientApp/angular.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/ClientApp/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@mintplayer/ng-bootstrap/_bootstrap.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -96,6 +97,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@mintplayer/ng-bootstrap/_bootstrap.scss",
               "src/styles.scss"
             ],
             "scripts": []
