--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Data/MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Data/MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj
@@ -8,7 +8,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
