--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data.Abstractions/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.Abstractions.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data.Abstractions/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.Abstractions.csproj
@@ -7,7 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
+		<PackageReference Include="MintPlayer.Pagination" Version="1.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
