--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>1.2.10</PackageVersion>
+		<PackageVersion>1.2.11</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -57,6 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Templates\Application\Data.Abstractions\Access\Mappers\" />
 	  <Folder Include="Templates\Application\Web\Server\Controllers\" />
 	  <Folder Include="Templates\Application\Web\Server\ViewModels\" />
 	  <Folder Include="Templates\Application\Web\Server\Views\" />
