--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/appsettings.Development.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/appsettings.Development.json
@@ -1,2 +1,19 @@
 ﻿{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "ConnectionStrings": {
+    "SsoCentral": "Server=(localdb)\\mssqllocaldb;Database=SsoCentral;Trusted_Connection=True;ConnectRetryCount=0"
+  },
+  "Mail": {
+    "SmtpHost": "",
+    "SmtpPort": 587,
+    "Tls": true,
+    "SmtpUsername": "",
+    "SmtpPassword": ""
+  }
 }
