--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>1.2.11</PackageVersion>
+		<PackageVersion>1.2.12</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -33,7 +33,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Templates\Application\Web\appsettings.Development.json" />
 	  <None Remove="Templates\Application\Web\appsettings.json" />
+	  <None Remove="Templates\Application\Web\appsettings.Production.json" />
 	  <None Remove="Templates\IdentityProvider\Web\appsettings.Development.json" />
 	  <None Remove="Templates\IdentityProvider\Web\appsettings.json" />
 	  <None Remove="Templates\IdentityProvider\Web\appsettings.Production.json" />
