--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/package.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/package.json
@@ -20,6 +20,11 @@
     "@angular/router": "^14.0.0",
     "@mintplayer/ng-base-url": "^14.0.0",
     "@mintplayer/ng-bootstrap": "^14.0.0",
+    "@mintplayer/ng-qr-code": "^14.0.0",
+    "@mintplayer/ng-router": "^14.0.0",
+    "@ngxs/store": "^3.7.4",
+    "font-awesome": "^4.7.0",
+    "guid-typescript": "^1.0.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -29,6 +34,7 @@
     "@angular/cli": "~14.0.2",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/qrcode": "^1.4.2",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
