--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/angular.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/ClientApp/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "node_modules/@mintplayer/ng-bootstrap/_bootstrap.scss",
+              "node_modules/font-awesome/scss/font-awesome.scss",
               "src/styles.scss"
             ],
             "scripts": []
