--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/appsettings.Production.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/appsettings.Production.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "SsoCentral": "Server=(localdb)\\mssqllocaldb;Database=SsoCentral;Trusted_Connection=True;ConnectRetryCount=0"
   },
+  "Account": {
+    "RequireEmailConfirmation": true
+  },
   "Mail": {
     "SmtpHost": "",
     "SmtpPort": 587,
