--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>6.0.0</PackageVersion>
+		<PackageVersion>6.0.1</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -36,6 +36,7 @@
 	  <None Remove="Templates\Application\Web\appsettings.Development.json" />
 	  <None Remove="Templates\Application\Web\appsettings.json" />
 	  <None Remove="Templates\Application\Web\appsettings.Production.json" />
+	  <None Remove="Templates\IdentityProvider\Web\.gitignore" />
 	  <None Remove="Templates\IdentityProvider\Web\appsettings.Development.json" />
 	  <None Remove="Templates\IdentityProvider\Web\appsettings.json" />
 	  <None Remove="Templates\IdentityProvider\Web\appsettings.Production.json" />
