--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Data/MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Data/MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj
@@ -7,6 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
