--- a/.github/workflows/publish-master.yml
+++ b/.github/workflows/publish-master.yml
@@ -8,11 +8,11 @@ jobs:
   build:
 
     name: publish-master
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v2.1.0
@@ -23,8 +23,8 @@ jobs:
       env:
         NUGET_AUTH_TOKEN: '%NUGET_AUTH_TOKEN%'
     
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.1
+    #- name: Setup MSBuild
+    #  uses: microsoft/setup-msbuild@v1.1
     
     - name: Install dependencies
       run: dotnet restore
