--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>6.0.13</PackageVersion>
+		<PackageVersion>6.0.14</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -49,6 +49,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Templates\IdentityProvider\Web\ClientApp\src\app\components\**" />
+	  <Content Remove="Templates\IdentityProvider\Web\ClientApp\src\app\components\**" />
+	  <EmbeddedResource Remove="Templates\IdentityProvider\Web\ClientApp\src\app\components\**" />
+	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\components\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\authentication-scheme.ts" />
 	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\two-factor-code.ts" />
 	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\enums\code-type.ts" />
 	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\entities\change-password-modal.ts" />
@@ -56,6 +64,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AspNet.Security.OAuth.LinkedIn" Version="6.0.6" />
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.1.1" />
 		<PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
@@ -64,6 +73,10 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.6" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.7" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="6.0.7" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.7" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="6.0.7" />
 		<PackageReference Include="MintPlayer.AspNetCore.Hsts" Version="6.0.0" />
 		<PackageReference Include="MintPlayer.AspNetCore.NoSniff" Version="6.0.2" />
 		<PackageReference Include="MintPlayer.AspNetCore.SubDirectoryViews" Version="6.0.0" />
