Corrections on external logins

--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/appsettings.Development.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/appsettings.Development.json
@@ -12,6 +12,28 @@
   "Account": {
     "RequireEmailConfirmation": false
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    },
+    "Microsoft": {
+      "ClientId": "",
+      "ClientSecret": ""
+    },
+    "Facebook": {
+      "AppId": "",
+      "AppSecret": ""
+    },
+    "Twitter": {
+      "ConsumerKey": "",
+      "ConsumerSecret": ""
+    },
+    "Linkedin": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
+  },
   "Mail": {
     "SmtpHost": "",
     "SmtpPort": 587,
