Corrected sourcename everywhere; Auto-create database

--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/appsettings.Production.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Web/appsettings.Production.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SsoCentral": "Server=(localdb)\\mssqllocaldb;Database=SsoCentral;Trusted_Connection=True;ConnectRetryCount=0"
+    "MintPlayer.AspNetCore.IdentityServer": "Server=(localdb)\\mssqllocaldb;Database=MintPlayer.AspNetCore.IdentityServer;Trusted_Connection=True;ConnectRetryCount=0"
   },
   "Account": {
     "RequireEmailConfirmation": true
