--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj
@@ -12,14 +12,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.1.1" />
-		<PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.1.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
+		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.1.2" />
+		<PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.1.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+		<PackageReference Include="MintPlayer.AspNetCore.MustChangePassword" Version="6.0.1" />
 		<PackageReference Include="MintPlayer.Extensions.OrderBy" Version="6.0.0" />
 	</ItemGroup>
 
