--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>6.0.25</PackageVersion>
+		<PackageVersion>6.0.26</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -58,6 +58,9 @@
 	<ItemGroup>
 	  <None Remove="Templates\Application\Data\.editorconfig" />
 	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\authentication-scheme.ts" />
+	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\create-developer-portal-request.ts" />
+	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\create-developer-portal-response.ts" />
+	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\developer-portal-app-information.ts" />
 	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\external-login-provider-info.ts" />
 	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\two-factor-code.ts" />
 	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\enums\code-type.ts" />
@@ -87,6 +90,7 @@
 		<PackageReference Include="MintPlayer.AspNetCore.XsrfForSpas" Version="6.0.0" />
 		<PackageReference Include="MintPlayer.Extensions.OrderBy" Version="6.0.0" />
 		<PackageReference Include="MintPlayer.Pagination" Version="1.0.3" />
+		<PackageReference Include="MintPlayer.Random" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
