--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/appsettings.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/appsettings.json
@@ -7,7 +7,14 @@
 		}
 	},
 	"ConnectionStrings": {
-		"Meteo": "Server=(localdb)\\mssqllocaldb;Database=MeteoApplication;Trusted_Connection=True;ConnectRetryCount=0"
+		"MintPlayer.AspNetCore.IdentityServer.Application": "Server=(localdb)\\mssqllocaldb;Database=MintPlayer.AspNetCore.IdentityServer.Application;Trusted_Connection=True;ConnectRetryCount=0"
+	},
+	"Authentication": {
+		"Central": {
+			"ClientId": "",
+			"ClientSecret": "",
+			"Authority": "https://localhost:00000"
+		}
 	},
 	"AllowedHosts": "*"
 }
