--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/ClientApp/package.json
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/Application/Web/ClientApp/package.json
@@ -21,6 +21,8 @@
 		"@mintplayer/ng-base-url": "^14.0.0",
 		"@mintplayer/ng-bootstrap": "^14.0.0",
 		"@mintplayer/ng-router": "^14.0.0",
+		"@ngxs/store": "^3.7.4",
+		"guid-typescript": "^1.0.9",
 		"rxjs": "~7.5.0",
 		"rxjs-compat": "^6.6.7",
 		"tslib": "^2.3.0",
