--- a/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data.Abstractions/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.Abstractions.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/Templates/IdentityProvider/Data.Abstractions/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.Abstractions.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Duende.IdentityServer" Version="6.1.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
 		<PackageReference Include="MintPlayer.Pagination" Version="6.0.0" />
 	</ItemGroup>
