--- a/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
+++ b/MintPlayer.AspNetCore.IdentityServer.Templates/MintPlayer.AspNetCore.IdentityServer.Templates.csproj
@@ -7,7 +7,7 @@
 
 		<PackageType>Template</PackageType>
 		<PackageId>MintPlayer.AspNetCore.IdentityServer.Templates</PackageId>
-		<PackageVersion>6.0.29</PackageVersion>
+		<PackageVersion>6.1.0</PackageVersion>
 		<Title>IdentityServer templates</Title>
 		<Authors>Pieterjan De Clippel</Authors>
 		<Company>MintPlayer</Company>
@@ -49,26 +49,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Remove="Templates\IdentityProvider\Web\ClientApp\src\app\components\**" />
-	  <Content Remove="Templates\IdentityProvider\Web\ClientApp\src\app\components\**" />
-	  <EmbeddedResource Remove="Templates\IdentityProvider\Web\ClientApp\src\app\components\**" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\components\**" />
+		<GeneratedContent Include="Templates/Application/Data/MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj.in" OutputPath="Templates/Application/Data/MintPlayer.AspNetCore.IdentityServer.Application.Data.csproj" />
+		<GeneratedContent Include="Templates/Application/Data.Abstractions/MintPlayer.AspNetCore.IdentityServer.Application.Data.Abstractions.csproj.in" OutputPath="Templates/Application/Data.Abstractions/MintPlayer.AspNetCore.IdentityServer.Application.Abstractions.csproj.csproj" />
+		<GeneratedContent Include="Templates/Application/Dtos/MintPlayer.AspNetCore.IdentityServer.Application.Dtos.csproj.in" OutputPath="Templates/Application/Dtos/MintPlayer.AspNetCore.IdentityServer.Application.Dtos.csproj" />
+		<GeneratedContent Include="Templates/Application/Web/MintPlayer.AspNetCore.IdentityServer.Application.Web.csproj.in" OutputPath="Templates/Application/Web/MintPlayer.AspNetCore.IdentityServer.Application.Web.csproj" />
+		<GeneratedContent Include="Templates/IdentityProvider/Data/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj.in" OutputPath="Templates/IdentityProvider/Data/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.csproj" />
+		<GeneratedContent Include="Templates/IdentityProvider/Data.Abstractions/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Data.Abstractions.csproj.in" OutputPath="Templates/IdentityProvider/Data.Abstractions/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Abstractions.csproj.csproj" />
+		<GeneratedContent Include="Templates/IdentityProvider/Dtos/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Dtos.csproj.in" OutputPath="Templates/IdentityProvider/Dtos/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Dtos.csproj" />
+		<GeneratedContent Include="Templates/IdentityProvider/Web/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Web.csproj.in" OutputPath="Templates/IdentityProvider/Web/MintPlayer.AspNetCore.IdentityServer.IdentityProvider.Web.csproj" />
+		<GeneratedContent Include="Templates/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering.csproj.in" OutputPath="Templates/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering.csproj" />
 	</ItemGroup>
-
-	<ItemGroup>
-	  <None Remove="Templates\Application\Data\.editorconfig" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\authentication-scheme.ts" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\create-developer-portal-request.ts" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\create-developer-portal-response.ts" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\developer-portal-app-information.ts" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\external-login-provider-info.ts" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\dtos\two-factor-code.ts" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\api\enums\code-type.ts" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\entities\change-admin-password-modal.ts" />
-	  <None Remove="Templates\IdentityProvider\Web\ClientApp\src\app\entities\change-password-modal.ts" />
-	  <None Remove="Templates\ServerSideRendering\Web\Properties\launchSettings.json" />
-	</ItemGroup>
-
+	
 	<ItemGroup>
 		<PackageReference Include="AspNet.Security.OAuth.LinkedIn" Version="6.0.6" />
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.1.1" />
