--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,4 +1,21 @@
 <Project>
-    <Import Project="eng/Versions.props" />
-    <!-- Condition=" '$(RepoRoot)' == '' " -->
+    <PropertyGroup Condition=" '$(RepoRoot)' == '' ">
+        <RepositoryUrl>https://github.com/MintPlayer/MintPlayer.AspNetCore.Templates</RepositoryUrl>
+
+        <!-- Copied from https://github.com/dotnet/aspnetcore/blob/0c5456afe95096db6ac5400cecd3440299b42714/Directory.Build.props. -->
+        <NuspecBasePath>$(MSBuildProjectDirectory)</NuspecBasePath>
+        <!-- The SPDX name for the source license. See https://spdx.org/licenses/. -->
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/MintPlayer/MintPlayer.AspNetCore.Templates</PackageProjectUrl>
+        <RepositoryType>git</RepositoryType>
+
+        <!-- Copied from https://github.com/dotnet/arcade/blob/c6a28c81f96d196338b3ea520bc1e6dc7c440e/src/Microsoft.DotNet.Arcade.Sdk/tools/ProjectDefaults.props. -->
+        <Authors>MintPlayer</Authors>
+        <DevelopmentDependency>false</DevelopmentDependency>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <Serviceable>true</Serviceable>
+    </PropertyGroup>
+
+    <Import Project="eng/TemplateProjects.props" Condition=" '$(RepoRoot)' == '' " />
+    <Import Project="eng/Versions.props" Condition=" '$(RepoRoot)' == '' " />
 </Project>
