--- a/eng/TemplateProjects.props
+++ b/eng/TemplateProjects.props
@@ -7,7 +7,7 @@
     <IncludeSymbols>false</IncludeSymbols>
     <NoWarn>$(NoWarn);2008;8021</NoWarn>
     <PackageTags>aspnet;templates</PackageTags>
-    <NuspecFile>$(MSBuildThisFileDirectory)templates.nuspec</NuspecFile>
+    <!-- <NuspecFile>$(MSBuildThisFileDirectory)templates.nuspec</NuspecFile> -->
     <CopyBuildOutputToOutputDirectory>false</CopyBuildOutputToOutputDirectory>
     <CopyOutputSymbolsToOutputDirectory>false</CopyOutputSymbolsToOutputDirectory>
   </PropertyGroup>
